[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0"
numpy = ">1.22.2"
Flask = ">2.2.0"
urllib3 = ">1.26.12"
Flask-Bootstrap = ">3.3.7"
Flask-CKEditor = ">0.4.6"
Flask-SQLAlchemy = ">3.0.3"
Flask-WTF = ">1.1.1"
WTForms = ">3.0.1"
Flask-Login = ">0.6.2"
fastapi = ">0.95.0"
pytz = "^2026.1.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
